[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Lyz", email = "eanegin@gmail.com"},
]
dependencies = [
    "mkdocs",
    "proselint",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-minify-plugin",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocs-autolinks-plugin>=0.5",
    "mkdocs-newsletter",
]
requires-python = ">=3.12"
license = {text = "MIT"}

[project.urls]
Homepage = ""

