[project]
name = "Blog"
version = "0.0.1"
description = "Second Brain"
authors = [
    {name = "Evgeniy", email = "eanegin@gmail.com"},
]
dependencies = [
    "mkdocs",
    "proselint",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-minify-plugin",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocs-autolinks-plugin>=0.5",
    "mkdocs-newsletter",
]
requires-python = ">=3.14"
license = {text = "MIT"}

[project.urls]
Homepage = ""

